--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,41 @@
-alabaster==0.7.10
-alembic==0.8.10
-asn1crypto==0.24.0
-astroid==1.6.1
-astropy==2.0.3
-attrs==17.4.0
-Babel==2.5.3
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.6.0
-bitarray==0.8.1
-bkcharts==0.2
-cloudpickle==0.5.2
-Cython==0.27.3
-cytoolz==0.9.0
-dask==0.16.1
-Flask==0.12
-Flask-Cors==3.0.3
-Flask-Migrate==2.0.3
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.1
-ipykernel==5.1.0
-ipython==6.2.1
-ipython-genutils==0.2.0
-ipywidgets==7.1.1
-isort==4.2.15
+cachetools==2.0.1
+certifi==2017.11.5
+chardet==3.0.4
+click==6.7
+dill==0.2.7.1
+Django==1.10.2
+firebase-admin==2.6.0
+Flask==0.12.2
+Flask-WTF==0.14.2
+future==0.16.0
+google-api-core==0.1.2
+google-api-python-client==1.5.5
+google-auth==1.2.1
+google-cloud-core==0.28.0
+google-cloud-firestore==0.28.0
+google-cloud-storage==1.6.0
+google-gax==0.15.16
+google-resumable-media==0.3.1
+googleapis-common-protos==1.5.3
+grpcio==1.7.3
+gunicorn==19.7.1
+httplib2==0.9.2
+idna==2.6
 itsdangerous==0.24
-jdcal==1.3
-jedi==0.11.1
 Jinja2==2.9.5
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.2
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-jupyterlab==0.31.4
-jupyterlab-launcher==0.10.2
-lazy-object-proxy==1.3.1
-llvmlite==0.21.0
-locket==0.2.0
-lxml==4.1.1
-Mako==1.0.6
 MarkupSafe==0.23
-matplotlib==2.1.2
-mccabe==0.6.1
-packaging==16.8
-pandas==0.22.0
-pandocfilters==1.4.2
-parso==0.1.1
-partd==0.3.8
-path.py==10.5
-pathlib2==2.3.0
-patsy==0.5.0
-pep8==1.7.1
-pickleshare==0.7.4
-Pillow==5.0.0
-pkginfo==1.4.1
-pluggy==0.6.0
-ply==3.10
-prompt-toolkit==1.0.15
-psutil==5.4.3
-py==1.5.2
-pycodestyle==2.3.1
-pycosat==0.6.3
-pycparser==2.18
-pycrypto==2.6.1
-pycurl==7.43.0.1
-pyflakes==1.6.0
-Pygments==2.2.0
-pylint==1.8.2
-python-dateutil==2.6.1
-python-editor==1.0.3
+oauth2client==4.0.0
+ply==3.8
+protobuf==3.5.0.post1
+pyasn1==0.1.9
+pyasn1-modules==0.0.8
+python-firebase==1.2
 pytz==2017.3
-PyWavelets==0.5.2
-SQLAlchemy==1.1.5
+requests==2.18.4
+rsa==3.4.2
+six==1.10.0
+swampy==2.1.7
+uritemplate==3.0.0
+urllib3==1.22
+Werkzeug==0.11.15
+WTForms==2.1
